# sdk-sidewalk

./: CMakeLists.txt  Kconfig
.github/workflows/: on-pr_documentation.yml
boards/seed/wio_tracker_1110/: Kconfig  Kconfig.defconfig  Kconfig.wio_tracker_1110  board.yml  wio_tracker_1110.dts  wio_tracker_1110.yaml  wio_tracker_1110_defconfig
lib/cortex-m4/lora_fsk/: CMakeLists.txt
samples/sid_end_device/: CMakeLists.txt  Kconfig.sysbuild  pm_static_wio_tracker_1110_nrf52840.yml
samples/sid_end_device/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  rak4631_nrf52840.overlay  wio_tracker_1110_nrf52840.conf
samples/sid_end_device/src/: sidewalk_events.c
subsys/config/common/: CMakeLists.txt
subsys/config/common/include/: app_subGHz_config.h
subsys/config/common/src/: app_subGHz_config.c  app_subGHz_config_lr11xx.c
subsys/sal/common/sid_pal_ifc/: sid_pal_log_ifc.h  sid_pal_platform_init_types.h  sid_pal_radio_ifc.h
subsys/sal/sid_pal/src/: CMakeLists.txt  sid_common.c  sid_gpio_utils.c  sid_pal_serial_bus_nrfx_spi.c  sid_pal_serial_bus_spi.c
subsys/semtech/: CMakeLists.txt
subsys/semtech/lr11xx/: CMakeLists.txt
subsys/semtech/sx126x/: sx126x_radio.c
subsys/semtech/sx126x/include/: sx126x_config.h
tests/functional/spi_bus/: Kconfig
tests/functional/spi_bus/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
tests/functional/storage_performance/: Kconfig  pm_static_nrf54l15dk_nrf54l15_cpuapp.yml  prj.conf
tests/functional/storage_performance/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
utils/sidewalk_dfu/: nordic_dfu.c
utils/state_notifier/: Kconfig
